--- a/README
+++ b/README
@@ -2,5 +2,7 @@ _____________________DETECTEUR____________________
 __________________________________________________
 --------------------------------------------------
 --------------------------------------------------
+V1 reconnaicance de race de Pingouin ML
+
 1- SUR api.py changer Base de donnée 
 2- 
